put and device
